--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="theme-color" content="#000000" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Nathaniel J. Ryan</title>
+  <title>Nathaniel Ryan</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" href="../src/assets/8bit.ico?">
 </head>
 
 <body>
