--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="theme-color" content="#000000" />
-  <title>Nathaniel Ryan</title>
+  <title>Nathaniel Ryan | Portfolio</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" href="../src/assets/8bit.ico?">
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
 
