save before large gif uploads

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Nathaniel Ryan | Portfolio</title>
+  <title>Nathaniel Ryan | Portfolio | JavaScript Developer</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="icon" href="../src/assets/8bit.ico?">
+  <link rel="icon" href="../src/assets/avatars/8bit.ico">
 </head>
 
 <body>
