contact page build going pretty well, still completing my right hand cell

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>Nathaniel Ryan | Portfolio | JavaScript Developer</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Anton|Oxygen&display=swap" rel="stylesheet">
   <link rel="icon" href="../src/assets/avatars/8bit.ico">
 </head>
 
