Changes almost complete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Hire Nathaniel Ryan Today!</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
@@ -27,12 +29,13 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Nathaniel Ryan</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,7 +56,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">Certifications</a>
         </li>
       </ul>
     </div>
@@ -63,25 +66,23 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Nathaniel
+          <span class="text-primary">Ryan</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">Portland, OR 97213 · (503) 504-7581 ·
+          <a href="mailto:nathanieljryan1994@gmail.com?subject=Hello Nate!"
+            target="_blank">nathanieljryan1994@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Experienced and self-driven developer, able to efficiently integrate and provide support in
+          collaborative work environments. Enthusiastic learner with exceptional critical thinking skills to provide new
+          and unique solutions following current industry best practice. Able to communicate effectively and
+          professionally with both clients, teams, and shareholders alike. </p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/nathaniel-ryan-88871817b/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/VolksRat71">
             <i class="fab fa-github"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
           </a>
         </div>
       </div>
@@ -95,45 +96,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
-          </div>
-        </div>
+            <h3 class="mb-0">Fullstack Javascript Instructor</h3>
+            <div class="subheading mb-3">2u/Trilogy Education</div>
+            <h5>PRIMARY JAVASCRIPT TEACHING ASSISTANT, 04/2020 – Present</h5>
+            <p>Maintain professional relationships with students and instructional staff at UC Berkeley for full-stack
+              web development cohort. Provide feedback to curriculum development and technical support teams to improve
+              in-class experience for students and staff.</p>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
-        </div>
+            <h5>JAVASCRIPT LEARNING ASSISTANT, 03/2020 – Present</h5>
+            <p>Utilize Beta Slack support application (Trilobot) to provide written technical and conceptual responses
+              to student inquiries. Assist students over video call to ensure ticket resolution. Provide feedback to
+              technical development teams on application modification requests based on user experience. </p>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h5>SUBSTITUTE TEACHING ASSISTANT, 02/2020 – Present</h5>
+            <p>Substitute Teaching Assistant at the University of Oregon for full stack web development cohort. </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">March 2020 - Present</span>
           </div>
         </div>
 
@@ -149,24 +128,13 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">University of Oregon</h3>
+            <div class="subheading mb-3">Fullstack JavaScript Course</div>
+            <p>Completed course with activies and testing in HTML5, CSS3, JavaScript, React, React Native, Node.js,
+              Express, MongoDB, MySQL & Git</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">April 2019 - September 2019</span>
           </div>
         </div>
 
@@ -181,41 +149,73 @@
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="HTML5">
             <i class="fab fa-html5"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="CSS3">
             <i class="fab fa-css3-alt"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="JavaScript">
             <i class="fab fa-js-square"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="React.js">
             <i class="fab fa-react"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Wordpress">
             <i class="fab fa-wordpress"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Bootstrap">
+            <i class="devicon-bootstrap-plain"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Sass">
+            <i class="fab fa-sass"></i>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Node.js">
+            <i class="fab fa-node"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Express.js">
+            <i class="devicon-express-original-wordmark"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="MySQL">
+            <i class="devicon-mysql-plain"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="MongoDB">
+            <i class="devicon-mongodb-plain"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Slack">
+            <i class="fab fa-slack"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="NPM">
             <i class="fab fa-npm"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Github">
+            <i class="fab fa-github"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Git Bash">
+            <i class="fab fa-git-alt"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Trello">
+            <i class="devicon-trello-plain"></i>
+          </li>
+          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
+            data-trigger="hover" data-content="Heroku">
+            <i class="devicon-heroku-original"></i>
           </li>
         </ul>
 
@@ -242,8 +242,12 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier
+          and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and
+          kayaking.</p>
+        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows,
+          I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements
+          in the front-end web development world.</p>
       </div>
     </section>
 
@@ -251,34 +255,14 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5">Certifications &amp; Accomplishments</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            Advanced React & GraphQL - BosType Inc. May 2020</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            Javascript30 - BosType Inc. May 2020</li>
         </ul>
       </div>
     </section>
