working on download icon, 'network error'

--- a/index.html
+++ b/index.html
@@ -78,11 +78,16 @@
           and unique solutions following current industry best practice. Able to communicate effectively and
           professionally with both clients, teams, and shareholders alike. </p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/nathaniel-ryan-88871817b/" target="_blank">
+          <a href="https://www.linkedin.com/in/nathaniel-ryan-88871817b/" target="_blank" data-container="body"
+            data-toggle="popover" data-placement="top" data-trigger="hover" data-content="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/VolksRat71">
+          <a href="https://github.com/VolksRat71" target="_blank" data-container="body" data-toggle="popover"
+            data-placement="top" data-trigger="hover" data-content="Github">
             <i class="fab fa-github"></i>
+          </a>
+          <a href="./document/Resume.pdf" download>
+            <i class="fas fa-user-tie"></i>
           </a>
         </div>
       </div>
@@ -242,12 +247,14 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier
-          and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and
-          kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows,
-          I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements
-          in the front-end web development world.</p>
+        <p>Apart from being a web developer, I enjoy auto mechanics. I spend
+          much of my time reserching new technologies and improvments on old ones in the automotive enthusient world. I
+          have an addiction to old Porsches that will forever be my biggest blunder
+        </p>
+        <p class="mb-0">Much of what drives my curiousity steams from my interest in cars! I like to learn new
+          technologies and have begain building simple circuts to program using Arduino boards. JavaScript and robotics
+          work well together and can be more capable than I think people give it credit for. I would love to discuss
+          that with you if interested!</p>
       </div>
     </section>
 
@@ -259,10 +266,11 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Advanced React & GraphQL - BosType Inc. May 2020</li>
+            <a href="https://advancedreact.com" target="_blank">Advanced React & GraphQL </a> - BosType Inc. May 2020
+          </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Javascript30 - BosType Inc. May 2020</li>
+            <a href="https://javascript30.com/" target="_blank">#JavaScript30 </a> - BosType Inc. May 2020</li>
         </ul>
       </div>
     </section>
