resume popover fix

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
             data-placement="top" data-trigger="hover" data-content="Github">
             <i class="fab fa-github"></i>
           </a>
-          <a href="./document/Resume.pdf" download>
+          <a href="./document/Resume.pdf" target="_blank" data-container="body" data-toggle="popover"
+            data-placement="top" data-trigger="hover" data-content="Download My Resume" download>
             <i class="fas fa-user-tie"></i>
           </a>
         </div>
