--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
@@ -69,7 +72,7 @@
         <h1 class="mb-0">Nathaniel
           <span class="text-primary">Ryan</span>
         </h1>
-        <div class="subheading mb-5">Portland, OR 97213 · (503) 504-7581 ·
+        <div class="subheading mb-5">Portland, OR 97213 · <span><a href="tel:503-504-7581">(503) 504-7581</a></span> ·
           <a href="mailto:nathanieljryan1994@gmail.com?subject=Hello Nate!"
             target="_blank">nathanieljryan1994@gmail.com</a>
         </div>
@@ -108,17 +111,56 @@
             <p>Maintain professional relationships with students and instructional staff at UC Berkeley for full-stack
               web development cohort. Provide feedback to curriculum development and technical support teams to improve
               in-class experience for students and staff.</p>
+            <ul>
+              <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
+              <li>Promoted to Primary Teaching Assistant only within 2 months initial hire with excellent work reviews.
+              </li>
+            </ul>
 
             <h5>JAVASCRIPT LEARNING ASSISTANT, 03/2020 – Present</h5>
             <p>Utilize Beta Slack support application (Trilobot) to provide written technical and conceptual responses
               to student inquiries. Assist students over video call to ensure ticket resolution. Provide feedback to
-              technical development teams on application modification requests based on user experience. </p>
+              technical development teams on application modification requests based on user experience.</p>
+            <ul>
+              <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
+              <li>Promoted to Primary Teaching Assistant only within 2 months initial hire with excellent work reviews.
+              </li>
+            </ul>
 
             <h5>SUBSTITUTE TEACHING ASSISTANT, 02/2020 – Present</h5>
             <p>Substitute Teaching Assistant at the University of Oregon for full stack web development cohort. </p>
+            <ul>
+              <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
+              <li>Promoted to Primary Teaching Assistant only within 2 months initial hire with excellent work reviews.
+              </li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">March 2020 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Retail Parts Professional</h3>
+            <div class="subheading mb-3">Advance Auto Parts</div>
+            <p>Completed course with activies and testing in HTML5, CSS3, JavaScript, React, React Native, Node.js,
+              Express, MongoDB, MySQL & Git</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">April 2019 - September 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Maintainance Technician</h3>
+            <div class="subheading mb-3">Interstate Power Systems</div>
+            <p>Completed course with activies and testing in HTML5, CSS3, JavaScript, React, React Native, Node.js,
+              Express, MongoDB, MySQL & Git</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">April 2019 - September 2019</span>
           </div>
         </div>
 
@@ -145,6 +187,53 @@
         </div>
 
       </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
+      <div class="w-100">
+        <h2 class="mb-5">Projects</h2>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"><a href="https://github.com/VolksRat71/DJI_drone_controller" target="_blank"
+                data-container="body" data-toggle="popover" data-placement="top" data-trigger="hover"
+                data-content="Link to Repository">
+                DJI Drone Controller</a></h3>
+            <div class="subheading mb-3">React.js, Node.js, Socket.io</div>
+            <p>Personal project, application with React.js frontend & Node.js backend that gives User Control of a DJI
+              Tello drone via the browser</p>
+            <ul>
+              <li>Created communications between drone's I.P address, Node.js server, & React.js User Experience.</li>
+              <li>Achieved 3D rendering (pitch, yaw, roll), battery state, drone responses by formatting a string
+                streamed from drone.</li>
+            </ul>
+            <br>
+            <h3 class="mb-0"><a href="https://github.com/VolksRat71/emit" target="_blank" data-container="body"
+                data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Link to Repository">
+                Emit Mobile App</a></h3>
+            <div class="subheading mb-3">React Native, Google Firebase</div>
+            <p>My role in this project was Data Storage, User Authentication, Test Environment Specialist, User
+              Experience & Project Manager. A mobile application developed with React Native that allows a user to enter
+              chatrooms based upon a sport topic.</p>
+            <ul>
+              <li>Led a group of 5 application developers, delegated roles in the project, determined deadlines, helped
+                contributors with general questions.</li>
+              <li>Studied & properly executed a foreign framework in 3 weeks.</li>
+            </ul>
+            <br>
+            <h3 class="mb-0"><a href="https://github.com/VolksRat71/advancedReact" target="_blank" data-container="body"
+                data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Link to Repository">
+                Sick Fits Ecommerce</a></h3>
+            <div class="subheading mb-3">React.js, Apollo Client, GrapghQL Yoga, Prisma</div>
+            <p>This was a course from JavaScript Intructor Wes Bos, it was a in depth look at React.js in Ecommerce and
+              has a functional card transaction</p>
+            <ul>
+              <li>blah blah blah</li>
+              <li>blah blah blah</li>
+            </ul>
+          </div>
+        </div>
     </section>
 
     <hr class="m-0">
