commented out some unfinished points & resume download until further notice & upadted certs.

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             data-placement="top" data-trigger="hover" data-content="Github">
             <i class="fab fa-github"></i>
           </a>
-          <a href="./document/Resume.pdf" target="_blank" data-container="body" data-toggle="popover"
+          <!-- <a href="./document/Resume.pdf" target="_blank" data-container="body" data-toggle="popover"
             data-placement="top" data-trigger="hover" data-content="Download My Resume" download>
             <i class="fas fa-user-tie"></i>
-          </a>
+          </a> -->
         </div>
       </div>
     </section>
@@ -178,8 +178,10 @@
           <div class="resume-content">
             <h3 class="mb-0">University of Oregon</h3>
             <div class="subheading mb-3">Fullstack JavaScript Course</div>
-            <p>Completed course with activies and testing in HTML5, CSS3, JavaScript, React, React Native, Node.js,
-              Express, MongoDB, MySQL & Git</p>
+            <p>Completed a course provided by University of Oregon on fundamentals and basics of Full Stack Software
+              engineering. More specifically, Javascript functionality in HTML and CSS with training in MySQL and Mongo
+              databases.</p>
+            <a class="js-scroll-trigger" href="#awards">Check out my certifications too!</a>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2019 - September 2019</span>
@@ -222,7 +224,7 @@
               <li>Studied & properly executed a foreign framework in 3 weeks.</li>
             </ul>
             <br>
-            <h3 class="mb-0"><a href="https://github.com/VolksRat71/advancedReact" target="_blank" data-container="body"
+            <!-- <h3 class="mb-0"><a href="https://github.com/VolksRat71/advancedReact" target="_blank" data-container="body"
                 data-toggle="popover" data-placement="top" data-trigger="hover" data-content="Link to Repository">
                 Sick Fits Ecommerce</a></h3>
             <div class="subheading mb-3">React.js, Apollo Client, GrapghQL Yoga, Prisma</div>
@@ -231,7 +233,7 @@
             <ul>
               <li>blah blah blah</li>
               <li>blah blah blah</li>
-            </ul>
+            </ul> -->
           </div>
         </div>
     </section>
@@ -356,11 +358,13 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="https://advancedreact.com" target="_blank">Advanced React & GraphQL </a> - BosType Inc. May 2020
+            <a href="https://github.com/VolksRat71/certs/blob/master/Advanced_QL.pdf" target="_blank">Advanced React &
+              GraphQL </a> - BosType Inc. May 2020
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="https://javascript30.com/" target="_blank">#JavaScript30 </a> - BosType Inc. May 2020</li>
+            <a href="https://github.com/VolksRat71/certs/blob/master/ES6_Basics.pdf" target="_blank">Modern JavaScript
+              ES6 Basics </a> - Coursera Course Certificates June 2020</li>
         </ul>
       </div>
     </section>
