random interface changes, irrelivant expericences commented out

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Retail Parts Professional</h3>
             <div class="subheading mb-3">Advance Auto Parts</div>
@@ -162,7 +162,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2019 - September 2019</span>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
@@ -181,7 +181,8 @@
             <p>Completed a course provided by University of Oregon on fundamentals and basics of Full Stack Software
               engineering. More specifically, Javascript functionality in HTML and CSS with training in MySQL and Mongo
               databases.</p>
-            <a class="js-scroll-trigger" href="#awards">Check out my certifications too!</a>
+            <a class="js-scroll-trigger" href="#awards"><i class="fa fa-chevron-down" aria-hidden="true"></i>
+              Check out my certifications too!</a>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2019 - September 2019</span>
@@ -365,6 +366,11 @@
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://github.com/VolksRat71/certs/blob/master/ES6_Basics.pdf" target="_blank">Modern JavaScript
               ES6 Basics </a> - Coursera Course Certificates June 2020</li>
+          <li>
+            <i class="fa-li fa fa-chevron-up" aria-hidden="true"></i>
+            <a class="js-scroll-trigger" href="#education">Check out my education too!
+            </a> - University of Oregon September 2019
+          </li>
         </ul>
       </div>
     </section>
