pop-overs on credentinal hrefs & a tag added to href on University of Oregon credential

--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Oregon</h3>
+            <h3 class="mb-0"><a href="https://github.com/VolksRat71/certs/blob/master/NathanielRyan.pdf" target="_blank"
+                data-toggle="popover" data-placement="top" data-trigger="hover"
+                data-content="View Credential">University of Oregon</a></h3>
             <div class="subheading mb-3">Fullstack JavaScript Course</div>
             <p>Completed a course provided by University of Oregon on fundamentals and basics of Full Stack Software
               engineering. More specifically, Javascript functionality in HTML and CSS with training in MySQL and Mongo
@@ -359,12 +361,16 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="https://github.com/VolksRat71/certs/blob/master/Advanced_QL.pdf" target="_blank">Advanced React &
+            <a href="https://github.com/VolksRat71/certs/blob/master/Advanced_QL.pdf" target="_blank"
+              data-toggle="popover" data-placement="left" data-trigger="hover" data-content="View Credential">Advanced
+              React &
               GraphQL </a> - BosType Inc. May 2020
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="https://github.com/VolksRat71/certs/blob/master/ES6_Basics.pdf" target="_blank">Modern JavaScript
+            <a href="https://github.com/VolksRat71/certs/blob/master/ES6_Basics.pdf" target="_blank"
+              data-toggle="popover" data-placement="left" data-trigger="hover" data-content="View Credential">Modern
+              JavaScript
               ES6 Basics </a> - Coursera Course Certificates June 2020</li>
           <li>
             <i class="fa-li fa fa-chevron-up" aria-hidden="true"></i>
