--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://github.com/VolksRat71/certs/blob/master/Responsive_Website_Basics.pdf" target="_blank"
               data-toggle="popover" data-placement="left" data-trigger="hover" data-content="View Credential">Responsive
-              Website Basics </a> - University Of London June 2020</li>
+              Website Basics </a> - University of London June 2020</li>
           <li>
             <i class="fa-li fa fa-chevron-up" aria-hidden="true"></i>
             <a class="js-scroll-trigger" href="#education">Check out my education too!
