font color change, it looks better...

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
             <p>Completed a course provided by University of Oregon on fundamentals and basics of Full Stack Software
               engineering. More specifically, Javascript functionality in HTML and CSS with training in MySQL and Mongo
               databases.</p>
-            <a class="js-scroll-trigger" href="#awards"><i class="fa fa-chevron-down" aria-hidden="true"></i>
-              Check out my certifications too!</a>
+            <i class="fa fa-chevron-down" aria-hidden="true"><a class="js-scroll-trigger" href="#awards"></i>
+            Check out my certifications too!</a>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2019 - September 2019</span>
