clearing up spelling errors & adding work details

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               web development cohort. Provide feedback to curriculum development and technical support teams to improve
               in-class experience for students and staff.</p>
             <ul>
-              <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
+              <li>Provide technical support and guidance and grade assignments for 60+ students.</li>
               <li>Promoted to Primary Teaching Assistant only within 2 months initial hire with excellent work reviews.
               </li>
             </ul>
@@ -123,7 +123,7 @@
               technical development teams on application modification requests based on user experience.</p>
             <ul>
               <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
-              <li>Promoted to Primary Teaching Assistant only within 2 months initial hire with excellent work reviews.
+              <li>Do to my performance in this position I was offered a position in a UC Berkeley cohort.
               </li>
             </ul>
 
@@ -131,7 +131,8 @@
             <p>Substitute Teaching Assistant at the University of Oregon for full stack web development cohort. </p>
             <ul>
               <li>Provide technical support and guidance and grade assignments for 40+ students.</li>
-              <li>Promoted to Primary Teaching Assistant only within 2 months initial hire with excellent work reviews.
+              <li>I will often have to integrate into a class with students that I am not familiar with to assist them,
+                but can do so easily.
               </li>
             </ul>
           </div>
@@ -139,31 +140,6 @@
             <span class="text-primary">March 2020 - Present</span>
           </div>
         </div>
-
-        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Retail Parts Professional</h3>
-            <div class="subheading mb-3">Advance Auto Parts</div>
-            <p>Completed course with activies and testing in HTML5, CSS3, JavaScript, React, React Native, Node.js,
-              Express, MongoDB, MySQL & Git</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">April 2019 - September 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Maintainance Technician</h3>
-            <div class="subheading mb-3">Interstate Power Systems</div>
-            <p>Completed course with activies and testing in HTML5, CSS3, JavaScript, React, React Native, Node.js,
-              Express, MongoDB, MySQL & Git</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">April 2019 - September 2019</span>
-          </div>
-        </div> -->
-
       </div>
 
     </section>
@@ -266,10 +242,6 @@
             <i class="fab fa-react"></i>
           </li>
           <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
-            data-trigger="hover" data-content="Wordpress">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item" data-container="body" data-toggle="popover" data-placement="top"
             data-trigger="hover" data-content="Bootstrap">
             <i class="devicon-bootstrap-plain"></i>
           </li>
@@ -343,13 +315,14 @@
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
         <p>Apart from being a web developer, I enjoy auto mechanics. I spend
-          much of my time reserching new technologies and improvments on old ones in the automotive enthusient world. I
-          have an addiction to old Porsches that will forever be my biggest blunder
+          much of my time researching new technologies, improvements on old ones in the automotive world. I
+          have an addiction to old Porsches. Coming from a small town in Wyoming, that was a much more bold automotive
+          endeavor than old lifted Chevrolet Trucks.
         </p>
-        <p class="mb-0">Much of what drives my curiousity steams from my interest in cars! I like to learn new
-          technologies and have begain building simple circuts to program using Arduino boards. JavaScript and robotics
-          work well together and can be more capable than I think people give it credit for. I would love to discuss
-          that with you if interested!</p>
+        <p class="mb-0">Really, much of what drives my curiosity in programming steams from my interest in cars. I enjoy
+          learning new technologies, lately, I have taken an interest in single-board computers. Mostly because it
+          is easy to interface with them using JavaScript. However, I am well aware it is not the hardware engineers
+          language of choice.</p>
       </div>
     </section>
 
